# devbox

./: LICENSE  README.md
actix-web/: Dockerfile.dev  Dockerfile.prod  Makefile
actix-web/app/: .clippy.toml  Cargo.toml  Makefile  rustfmt.toml
actix-web/app/src/: lib.rs  main.rs
actix-web/app/tests/: test_qr.rs
asp-net-core/: Dockerfile.dev  Dockerfile.prod  Makefile
asp-net-core/app/: .editorconfig  .gitignore  Directory.Build.props  Makefile  QrCodeProject.sln  stylecop.json
asp-net-core/app/QrCode.Tests/: QrCode.Tests.csproj  QrCodeEndpointTests.cs
django/: .dockerignore  Dockerfile.dev  Dockerfile.prod  Makefile
django/app/: Makefile  manage.py  pyproject.toml  requirements.txt
django/app/app/: settings.py  (+2 more)
fastapi/: .dockerignore  Dockerfile.dev  Dockerfile.prod  Makefile
fastapi/app/: Makefile  main.py  pyproject.toml
fastify/: Dockerfile.prod  Makefile
fastify/app/: Makefile  app.js  app.mock.test.js  app.test.js  eslint.config.js  index.js  package-lock.json  package.json
gin/: .gitignore  Dockerfile.dev  Dockerfile.prod  Makefile
gin/app/: .golangci.yml  Makefile  go.mod  main.go  main_test.go
ktor/: Dockerfile.dev  Dockerfile.prod  Makefile
ktor/app/: Makefile  build.gradle.kts
laravel/: .dockerignore  Dockerfile.dev  Dockerfile.prod  Makefile
laravel/app/: .env.example  .php-cs-fixer.cache  .php-cs-fixer.php  Makefile  composer.json  package-lock.json
nestjs/: Dockerfile.dev  Dockerfile.prod  Makefile
nestjs/app/: Makefile  package-lock.json  package.json
phoenix/: .dockerignore  Dockerfile.dev  Dockerfile.prod  Makefile
phoenix/app/: .credo.exs  .formatter.exs  .sobelow-conf  Makefile  mix.exs
ror/: .dockerignore  Dockerfile.dev  Dockerfile.prod  Makefile
ror/app/: .rubocop.yml  Gemfile  Makefile
spring-boot/: Dockerfile.dev  Dockerfile.prod  Makefile
spring-boot/app/: Makefile  build.gradle
(+55 files in other folders)
