[package]
name = "app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "QR code generator service"
repository = "https://github.com/HardAndHeavy/devbox"
readme = "README.md"
keywords = ["qr-code", "web-service", "actix"]
categories = ["web-programming", "encoding"]

[dependencies]
actix-web = "4.11.0"
env_logger = "0.11.8"
image = "0.25.8"
log = "0.4.28"
qrcode = "0.14.1"
serde = { version = "1.0.226", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
variant_size_differences = "warn"
unused_results = "warn"
unused_qualifications = "warn"
unused_import_braces = "warn"
unused_extern_crates = "warn"
trivial_numeric_casts = "warn"
trivial_casts = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
multiple_crate_versions = "allow"
wildcard_dependencies = "warn"
missing_const_for_fn = "warn"
inefficient_to_string = "warn"
unnecessary_wraps = "warn"
use_self = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
inconsistent_struct_constructor = "warn"
default_trait_access = "warn"
module_name_repetitions = "allow"
must_use_candidate = "warn"
